--- a/wrangle_curr_logs.ipynb
+++ b/wrangle_curr_logs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "750ed3d4",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "ad019024",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "ef9b941f",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
     "    curr_logs['days_after_grad'] = curr_logs.date-curr_logs.end_date\n",
     "    \n",
     "    # drop columns\n",
-    "    cols_to_drop = ['Unnamed: 0', 'Unnamed: 0.1', 'date', 'time']\n",
+    "    cols_to_drop = ['Unnamed: 0', 'date', 'time']\n",
     "    curr_logs = curr_logs.drop(columns=cols_to_drop)\n",
     "    \n",
     "    # drop null for path column\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "559ccd54",
    "metadata": {},
    "outputs": [],
@@ -150,10 +150,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c71904d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>path</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>cohort_id</th>\n",
+       "      <th>program_id</th>\n",
+       "      <th>ip</th>\n",
+       "      <th>name</th>\n",
+       "      <th>slack</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>end_date</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>updated_at</th>\n",
+       "      <th>date_time</th>\n",
+       "      <th>program</th>\n",
+       "      <th>staff</th>\n",
+       "      <th>days_after_grad</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date_time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-01-26 09:55:03</th>\n",
+       "      <td>/</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>97.105.19.61</td>\n",
+       "      <td>Hampton</td>\n",
+       "      <td>#hampton</td>\n",
+       "      <td>2015-09-22</td>\n",
+       "      <td>2016-02-06</td>\n",
+       "      <td>2016-06-14 19:52:26</td>\n",
+       "      <td>2016-06-14 19:52:26</td>\n",
+       "      <td>2018-01-26 09:55:03</td>\n",
+       "      <td>php</td>\n",
+       "      <td>False</td>\n",
+       "      <td>720 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-26 09:56:02</th>\n",
+       "      <td>java-ii</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>97.105.19.61</td>\n",
+       "      <td>Hampton</td>\n",
+       "      <td>#hampton</td>\n",
+       "      <td>2015-09-22</td>\n",
+       "      <td>2016-02-06</td>\n",
+       "      <td>2016-06-14 19:52:26</td>\n",
+       "      <td>2016-06-14 19:52:26</td>\n",
+       "      <td>2018-01-26 09:56:02</td>\n",
+       "      <td>php</td>\n",
+       "      <td>False</td>\n",
+       "      <td>720 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-26 09:56:05</th>\n",
+       "      <td>java-ii/object-oriented-programming</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>97.105.19.61</td>\n",
+       "      <td>Hampton</td>\n",
+       "      <td>#hampton</td>\n",
+       "      <td>2015-09-22</td>\n",
+       "      <td>2016-02-06</td>\n",
+       "      <td>2016-06-14 19:52:26</td>\n",
+       "      <td>2016-06-14 19:52:26</td>\n",
+       "      <td>2018-01-26 09:56:05</td>\n",
+       "      <td>php</td>\n",
+       "      <td>False</td>\n",
+       "      <td>720 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-26 09:56:06</th>\n",
+       "      <td>slides/object_oriented_programming</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>97.105.19.61</td>\n",
+       "      <td>Hampton</td>\n",
+       "      <td>#hampton</td>\n",
+       "      <td>2015-09-22</td>\n",
+       "      <td>2016-02-06</td>\n",
+       "      <td>2016-06-14 19:52:26</td>\n",
+       "      <td>2016-06-14 19:52:26</td>\n",
+       "      <td>2018-01-26 09:56:06</td>\n",
+       "      <td>php</td>\n",
+       "      <td>False</td>\n",
+       "      <td>720 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-26 09:56:24</th>\n",
+       "      <td>javascript-i/conditionals</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>97.105.19.61</td>\n",
+       "      <td>Teddy</td>\n",
+       "      <td>#teddy</td>\n",
+       "      <td>2018-01-08</td>\n",
+       "      <td>2018-05-17</td>\n",
+       "      <td>2018-01-08 13:59:10</td>\n",
+       "      <td>2018-01-08 13:59:10</td>\n",
+       "      <td>2018-01-26 09:56:24</td>\n",
+       "      <td>java</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-111 days</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    path  user_id  cohort_id  \\\n",
+       "date_time                                                                      \n",
+       "2018-01-26 09:55:03                                    /        1        8.0   \n",
+       "2018-01-26 09:56:02                              java-ii        1        8.0   \n",
+       "2018-01-26 09:56:05  java-ii/object-oriented-programming        1        8.0   \n",
+       "2018-01-26 09:56:06   slides/object_oriented_programming        1        8.0   \n",
+       "2018-01-26 09:56:24            javascript-i/conditionals        2       22.0   \n",
+       "\n",
+       "                     program_id            ip     name     slack start_date  \\\n",
+       "date_time                                                                     \n",
+       "2018-01-26 09:55:03           1  97.105.19.61  Hampton  #hampton 2015-09-22   \n",
+       "2018-01-26 09:56:02           1  97.105.19.61  Hampton  #hampton 2015-09-22   \n",
+       "2018-01-26 09:56:05           1  97.105.19.61  Hampton  #hampton 2015-09-22   \n",
+       "2018-01-26 09:56:06           1  97.105.19.61  Hampton  #hampton 2015-09-22   \n",
+       "2018-01-26 09:56:24           2  97.105.19.61    Teddy    #teddy 2018-01-08   \n",
+       "\n",
+       "                      end_date           created_at           updated_at  \\\n",
+       "date_time                                                                  \n",
+       "2018-01-26 09:55:03 2016-02-06  2016-06-14 19:52:26  2016-06-14 19:52:26   \n",
+       "2018-01-26 09:56:02 2016-02-06  2016-06-14 19:52:26  2016-06-14 19:52:26   \n",
+       "2018-01-26 09:56:05 2016-02-06  2016-06-14 19:52:26  2016-06-14 19:52:26   \n",
+       "2018-01-26 09:56:06 2016-02-06  2016-06-14 19:52:26  2016-06-14 19:52:26   \n",
+       "2018-01-26 09:56:24 2018-05-17  2018-01-08 13:59:10  2018-01-08 13:59:10   \n",
+       "\n",
+       "                              date_time program  staff days_after_grad  \n",
+       "date_time                                                               \n",
+       "2018-01-26 09:55:03 2018-01-26 09:55:03     php  False        720 days  \n",
+       "2018-01-26 09:56:02 2018-01-26 09:56:02     php  False        720 days  \n",
+       "2018-01-26 09:56:05 2018-01-26 09:56:05     php  False        720 days  \n",
+       "2018-01-26 09:56:06 2018-01-26 09:56:06     php  False        720 days  \n",
+       "2018-01-26 09:56:24 2018-01-26 09:56:24    java  False       -111 days  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "curr_logs.head()"
    ]
@@ -168,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ebb39a31",
    "metadata": {},
    "outputs": [],
